--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -19,4 +19,30 @@
     <style name="PickerDialogTheme" parent="@*android:style/Theme.DeviceDefault.Settings.Dialog">
     </style>
 
+    <style name="PickerDialogTheme_Dark">
+		<item name="android:windowFrame">@null</item>
+		<item name="android:windowTitleStyle">@*android:style/DialogWindowTitle.Material.Light</item>
+        <item name="android:windowTitleBackgroundStyle">@*android:style/DialogWindowTitleBackground.Material.Light</item>
+        <item name="android:windowBackground">@*android:drawable/dialog_background_material</item>
+		<item name="android:windowElevation">@*android:dimen/floating_window_z</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowAnimationStyle">@*android:style/Animation.Material.Dialog</item>
+        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="android:windowCloseOnTouchOutside">@*android:bool/config_closeDialogWhenTouchOutside</item>
+
+        <item name="android:colorBackgroundCacheHint">@null</item>
+
+        <item name="android:listPreferredItemPaddingLeft">?android:attr/dialogPreferredPadding</item>
+        <item name="android:listPreferredItemPaddingRight">?android:attr/dialogPreferredPadding</item>
+        <item name="android:listPreferredItemPaddingStart">?android:attr/dialogPreferredPadding</item>
+        <item name="android:listPreferredItemPaddingEnd">?android:attr/dialogPreferredPadding</item>
+
+        <item name="android:listDivider">@null</item>
+
+        <item name="@*android:preferencePanelStyle">@*android:style/PreferencePanel.Dialog</item>
+    </style>
+
 </resources>
